# Otus-RL-homework

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: lunar-lander.ipynb  taxi-v3.ipynb
notebooks/cart-pole/: A2C.ipynb  DDPG_CartPole.ipynb
src/: __init__.py
src/environments/: __init__.py
